# opencl

./: .gitignore
Dijkstra/: .cproject  a.out  all  makefile
Dijkstra/src/: Dijkstra.h  DijkstraKernel1.cl  DijkstraKernel2.cl  cl_create.h  initializeBuffers.cl  main.cpp
HelloWorld/: .cproject
HelloWorld/src/: HelloWorld.cpp
MyOpenCL/: .cproject  .project  c_result
MyOpenCL/src/: MyOpenCL.cpp  MyOpenCL.h
TestC++/: .cproject
TestC++/src/: HelloWorld.cpp  a.out  main.cpp
VectorAdd/: .cproject
VectorAdd/Debug/: VectorAdd  c_out  makefile
VectorAdd/Debug/src/: main.d  subdir.mk
VectorAdd/src/: cl_vector_add.h  main.cpp  vector_add.cl
demo/: CMakeLists.txt  demo.cpp
matrix_mul/: CMakeLists.txt  MatrixMul.cpp  a.c  all  makefile
matrix_mul/src/: MatrixMul.cpp  a  matrix_mul.cl
matrix_mul_c/: .cproject  .project  makefile
matrix_mul_c/src/: cl_create.c  cl_create.h  cl_matrix.c  cl_matrix.h  main.c  matrix_mul.h
sample/: 说明.txt
sample/src/Chapter_3/OpenCLInfo/: a.out
vectoradd/: .cproject  .project  VectorAdd.cpp  VectorAdd_cpu.cpp  a.out  result_gpu.txt
